fix(articles): fix code blocks taking too much space on smaller window

--- a/misc/style/main.scss
+++ b/misc/style/main.scss
@@ -27,6 +27,7 @@ body {
     color: white;
     height: 100vh;
     overflow: auto;
+    min-width: 200px;
 }
 
 .articles-list .articles-list-items {
@@ -56,10 +57,6 @@ body {
     background-color: var(--background-color-contrast-focus);
 }
 
-.articles-article {
-    flex: 3;
-    border-left: 2px solid white;
-}
 
 .articles-list h1 {
     font-size: 2rem;
@@ -67,6 +64,9 @@ body {
 
 
 .articles-article {
+    min-width: 0;
+    flex: 3;
+    border-left: 2px solid white;
     display: flex;
     flex-direction: column;
     background-color: var(--background-color);
